--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,7 @@ services:
       context: ./client
       dockerfile: Dockerfile
     ports:
-      - "5173:5173"
-    volumes:
-      - ./client:/app
-      - /app/node_modules
-    environment:
-      - VITE_API_URL=http://localhost:3000
+      - "80:80"
     depends_on:
       - server
 
@@ -21,21 +16,21 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
-    volumes:
-      - ./server:/app
-      - /app/node_modules
     environment:
       - MONGODB_URI=mongodb://mongodb:27017/resto
       - PORT=3000
+      - NODE_ENV=production
     depends_on:
       - mongodb
 
   mongodb:
     image: mongo:latest
-    ports:
-      - "27017:27017"
     volumes:
       - mongodb_data:/data/db
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD:-secretpassword}
+    command: ["mongod", "--auth"]
 
 volumes:
   mongodb_data:
