--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@codemirror/lang-json": "^6.0.1",
+    "@heroicons/react": "^2.2.0",
     "@types/codemirror": "^5.60.15",
     "@types/react-toastify": "^4.0.2",
     "@uiw/react-codemirror": "^4.21.0",
