--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "dev": "npx tailwindcss -i ./src/index.css -o ./src/styles/tailwind.css && vite",
+    "build": "npx tailwindcss -i ./src/index.css -o ./src/styles/tailwind.css && tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -24,7 +24,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@tailwindcss/postcss": "^4.0.15",
     "@types/node": "^22.13.11",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
