--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,11 @@
-version: '3.8'
-
+name: resto
 services:
   client:
     build:
       context: ./client
       dockerfile: Dockerfile
     ports:
-      - "80:80"
+      - "8081:80"
     depends_on:
       - server
 
@@ -15,7 +14,7 @@ services:
       context: ./server
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - "8082:3000"
     environment:
       - MONGODB_URI=mongodb://mongodb:27017/resto
       - PORT=3000
