fix(app): Add handling of the API url in the frontend
We had hardcoded values in the frontend for the backends API. Now we handle this with env variables.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8081:80"
+    environment:
+      - VITE_API_URL=http://localhost:8082
     depends_on:
       - server
 
