--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -16,10 +16,17 @@ RUN npm run build
 
 FROM nginx:alpine
 
+# Copy the built files
 COPY --from=builder /app/dist /usr/share/nginx/html
 
+# Copy nginx configuration
 COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Copy env setup script
+COPY docker-entrypoint.sh /docker-entrypoint.sh
+RUN chmod +x /docker-entrypoint.sh
 
 EXPOSE 80
 
+ENTRYPOINT ["/docker-entrypoint.sh"]
 CMD ["nginx", "-g", "daemon off;"]
