--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.0"
+  },
+  "dependencies": {
+    "@heroui/react": "^2.7.5",
+    "framer-motion": "^12.6.2",
+    "tailwindcss": "^4.0.17"
   }
 }
