--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "@heroui/react": "^2.7.5",
     "@types/codemirror": "^5.60.15",
     "@types/react-toastify": "^4.0.2",
+    "@uiw/codemirror-theme-dracula": "^4.23.10",
+    "@uiw/codemirror-theme-github": "^4.23.10",
     "@uiw/react-codemirror": "^4.21.0",
     "axios": "^1.8.4",
     "react": "^19.0.0",
