--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
     "swagger-jsdoc": "^6.2.8",
