--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,8 @@
     "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.7.5",
     "@heroui/theme": "^2.4.12",
+    "@tanstack/react-query": "^5.71.10",
+    "@tanstack/react-query-devtools": "^5.71.10",
     "@types/codemirror": "^5.60.15",
     "@types/react-toastify": "^4.0.2",
     "@uiw/codemirror-theme-dracula": "^4.23.10",
