--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -20,5 +20,6 @@
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
     "no-console": ["warn", { "allow": ["error", "warn"] }]
-  }
+  },
+  "ignorePatterns": ["dist/*", "node_modules/*"]
 }
