--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,8 @@
     "morgan": "^1.10.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "vite": "^6.3.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
